feat: add some styles for nav list and sections in main

--- a/style.css
+++ b/style.css
@@ -59,4 +59,32 @@
      display: flex;
      flex-direction: column;
      justify-content: space-between;
+     list-style: none;
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  .nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition: .3s;
+  }
+
+  .section-item a {
+    color: #829985;
+    text-decoration: none;
+    transition: color 0.5s;
+  }
+
+  .section-item a:hover {
+    color:#4d2323;
+  }
+  
+  
+
+
+
+
+
