--- a/style.css
+++ b/style.css
@@ -8,19 +8,23 @@
   }
   
   body {
-    min-height: 100vh;
-    margin: 0; padding: 0;
+    max-width: 1440px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
 
-  .container {
-      max-width: 1440px;
-      margin: 0 auto;
+  .main-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    /*margin: 0 auto;*/
   }
   
   .nav-list {
+     /*max-width: 1440px;
+     margin: 0 auto;*/
      display: flex;
      flex-direction:row;
      justify-content: space-between;
